# bioinf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  main.cpp  planrada.md
include/: MyClass.hpp  sequence_analyzer.hpp
src/: MyClass.cpp  sequence_analyzer.cpp
